# SEProject

./: CMakeLists.txt  README.md  Task.cpp  Task.h  TaskController.cpp  TaskController.h  TaskControllerInterface.h  TaskFactory.cpp  TaskFactory.h  TaskInterface.h  TaskManager.cpp  TaskManager.h  ViewInterface.h  main.cpp  test_simple.cpp
.cache/clangd/index/: main.cpp.3930FDA016D842C7.idx  test_simple.cpp.877151A5F83C6557.idx
Aufgabenplaner/: CMakeLists.txt  dialogtaskbearbeiten.cpp  dialogtaskbearbeiten.h  dialogtaskbearbeiten.ui  dialogtaskhinzufuegen.cpp  dialogtaskhinzufuegen.h  dialogtaskhinzufuegen.ui  erledigteaufgabenliste.cpp  erledigteaufgabenliste.h  erledigteaufgabenliste.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ueberfaelligeaufgaben.cpp  ueberfaelligeaufgaben.h  ueberfaelligeaufgaben.ui
build-Aufgabenplaner-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  TasksFile.csv  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Aufgabenplaner-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-Aufgabenplaner-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Aufgabenplaner-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/Aufgabenplaner_autogen/: deps  mocs_compilation.cpp
build-Aufgabenplaner-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/Aufgabenplaner_autogen/EWIEGA46WW/: moc_dialogtaskbearbeiten.cpp.d  moc_dialogtaskhinzufuegen.cpp.d  moc_erledigteaufgabenliste.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_ueberfaelligeaufgaben.cpp  (+1 more)
build_release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_release/.qt/: QtDeploySupport.cmake
build_release/AufgabenTracker_autogen/: deps
build_release/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_release/simple_test_autogen/: deps
dok/: IN DOK 2 EINARBEITEN!_PSE_P3_Abstract.docx  IN DOK 2 EINARBEITEN!_PSE_P3_FinalesProdukt.docx  Walter-Kevin_92212082_PSE_P2_Abgabe.docx  ~$lter-Kevin_92212082_PSE_P2_Abgabe.docx  ~WRL0003.tmp
dok/1.1 Konzeptionsphase/: Anforderungsdokument.docx  Kurzussamenfassung für PebblePad.docx  Projektdokumentation.docx  Spezifikationsdokument.docx  UML-Diagramme.vsdx  Walter-Kevin_92212082_PSE_P1_Abgabe.docx
dok/1.2 Erarbeitungs- und Reflexionsphase/: Walter-Kevin_92212082_PSE_P2_Abgabe.docx  Walter-Kevin_92212082_PSE_P3_Abstract.docx  ~$lter-Kevin_92212082_PSE_P2_Abgabe.docx
googletest/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
(+333 files in other folders)
